applications/base/cloud-diplomats-rollout/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-diplomats-ingress
  namespace: cloud-diplomats-rollout
  
  annotations:
    # SSL
    # cert-manager.io/cluster-issuer: letsencrypt-prod-nginx
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

    # Body
    nginx.ingress.kubernetes.io/proxy-body-size: 25m

    # Add retry on http_502+ for better network reliability
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout http_502 http_503 http_504"

spec:
  ingressClassName: nginx
  tls:
    - secretName: cloud-diplomats-tls
      hosts:
        - api${ARGOCD_ENV_DNS_ENV}.${ARGOCD_ENV_DNS_DOMAIN}

  rules:
    - host: api${ARGOCD_ENV_DNS_ENV}.${ARGOCD_ENV_DNS_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-stable
                port:
                  number: 80
